--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -26,7 +26,7 @@
                             <% if (isLoggedIn) { %>
                                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                 <input type="hidden" name="productId" value="<%= product._id %>">
-                                <button class="btn" type="button" onclick="postAddToCart(this)">Add to Cart</button>
+                                <button class="btn addToCartButton" type="button">Add to Cart</button>
                             <% } %>
                         </div>
                     </article>
